@@ -30,7 +30,7 @@ use Carp;
 use base qw(Cache::Entry);
 use fields qw(dir path lockdetails);
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 # hash of locks held my the process, keyed on path.  This is useful for
 # catching potential deadlocks and warning the user, and for implementing
@@ -95,7 +95,7 @@ sub _set {
     # only remove current size if there is no active write handle
     elsif ($self->_trylock(LOCK_SH)) {
         $orig_size = $self->size();
-    $self->_unlock();
+        $self->_unlock();
     }
     else {
         $orig_size = 0;
@@ -103,6 +103,10 @@ sub _set {
 
     # replace existing data
     rename($filename, $self->{path});
+
+    # fix permissions of tempfile
+    my $mode = 0666 & ~($self->{cache}->cache_umask());
+    chmod $mode, $self->{path};
 
     # invalidate any active handle locks
     unlink($self->{path} . $Cache::File::LOCK_EXT);
@@ -548,6 +552,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Entry.pm,v 1.5 2004/03/22 13:16:41 caleishm Exp $
+$Id: Entry.pm,v 1.7 2005/10/20 12:52:03 caleishm Exp $
 
 =cut
