@@ -34,7 +34,7 @@ use Cache::Memory::Entry;
 use base qw(Cache);
 use fields qw(namespace);
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 
 # storage for all data
@@ -367,6 +367,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Memory.pm,v 1.6 2004/03/22 13:16:41 caleishm Exp $
+$Id: Memory.pm,v 1.7 2005/10/20 12:52:03 caleishm Exp $
 
 =cut
