@@ -25,7 +25,7 @@ use Carp;
 use base qw(Cache::Entry);
 use fields qw(store_entry);
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 
 sub new {
@@ -283,6 +283,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Entry.pm,v 1.5 2004/03/22 13:16:41 caleishm Exp $
+$Id: Entry.pm,v 1.6 2005/10/20 12:52:03 caleishm Exp $
 
 =cut
