@@ -28,7 +28,7 @@ use Cache::Null::Entry;
 use base qw(Cache);
 use fields qw(cache_root);
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 =head1 CONSTRUCTOR
 
@@ -119,6 +119,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Null.pm,v 1.2 2004/03/22 13:16:41 caleishm Exp $
+$Id: Null.pm,v 1.3 2005/10/20 12:52:03 caleishm Exp $
 
 =cut
