@@ -23,7 +23,7 @@ use Cache::IOString;
 use base qw(Cache::Entry);
 use fields qw();
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 
 sub new {
@@ -111,6 +111,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: Entry.pm,v 1.3 2004/03/22 13:16:41 caleishm Exp $
+$Id: Entry.pm,v 1.4 2005/10/20 12:52:04 caleishm Exp $
 
 =cut
