@@ -16,7 +16,7 @@ use strict;
 use warnings;
 use Carp;
 
-our $VERSION = '2.02';
+our $VERSION = '2.03';
 
 
 sub new {
@@ -57,6 +57,6 @@ This module is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY KIND,
 either expressed or implied. This program is free software; you can
 redistribute or modify it under the same terms as Perl itself.
 
-$Id: RemovalStrategy.pm,v 1.2 2004/03/22 13:16:41 caleishm Exp $
+$Id: RemovalStrategy.pm,v 1.3 2005/10/20 12:52:03 caleishm Exp $
 
 =cut
