@@ -1,3 +1,8 @@
+2005-10-20
+	- Bugfix release (2.03)
+	- Fix for cache_umask: individual files were not created with correct
+	  permissions (credit to Chris Huegle).
+
 2004-03-23
 	- Bugfix release (2.02)
 	- Update require to 5.006 since 'use warnings' depends on it
